# PySignalBuilder

./: .gitignore  README.md  builder.py  functions.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
SignalBuilder/: __init__.py  builder.py  functions.py
documentation/example/: example.md
examples/: PySignalBuilder_example.ipynb  builder_test.py
examples/.ipynb_checkpoints/: PySignalBuilder_example-checkpoint.ipynb
